--- a/events.html
+++ b/events.html
@@ -52,63 +52,36 @@
 
        <!-- Jumbotron -->
 <div class="jumbotron jumbotron-image">
+  <img src="event-gathering.jpg">
 </div>
 
 <div class="event-container">
-  <h1>Upcoming Events</h1>
-<div class="eventcontent-1">
-  <img src="dummy-image.jpeg">
-  <!--Event Details-->
-  <div class="event-details">
-    <ul class="events">
-      <h2>Event 1</h2>
-      <li class="clock-section"><i class="fa fa-clock-o" aria-hidden="true"></i></i>1:30 PM - 4:30 PM</li>
-      <li class="user-section"><i class="fa fa-user" aria-hidden="true"></i></i> Speaker: John Doe</li>
-    </ul>
-    <p>Lorem ipsum dolor sit amet consectetur 
-      adipisicing elit. 
-    </p>
-    <a href="#">Join Event</a>
+  <div class="event-nav">
+    <h2>Upcoming Events</h2>
   </div>
-  <div class="month">March <br/> 1 2022</div>
-  
-  <!--<button class="attend-signup" type="submit">Attend</button>-->
-</div>
-<div class="eventcontent-2">
-  <img src="dummy-image.jpeg">
-  <!--Event Details-->
-  <div class="event-details">
-    <ul class="events">
-      <h2>Event 2</h2>
-      <li class="clock-section"><i class="fa fa-clock-o" aria-hidden="true"></i></i>1:30 PM - 4:30 PM</li>
-      <li class="user-section"><i class="fa fa-user" aria-hidden="true"></i></i> Speaker: John Doe</li>
-    </ul>
-    <p>Lorem ipsum dolor sit amet consectetur 
-      adipisicing elit. 
-    </p>
-    <a href="#">Join Event</a>
+  <div class="eventbox">
+    <img src="dummy-image.jpeg">
+    <h3>Event Name</h3>
+    <span class="month">Mar</span>
+    <span class="day">11</span>
+    <p> Lorem ipsum dolor, sit amet consectetur</p>
   </div>
-  <div class="month">March <br/> 2 2022</div>
-  <!-- <button class="attend-signup" type="submit">Attend</button>-->
-</div>
-<div class="eventcontent-3">
-  <img src="dummy-image.jpeg">
-  <!--Event Details-->
-  <div class="event-details">
-    <ul class="events">
-      <h2>Event 3</h2>
-      <li class="clock-section"><i class="fa fa-clock-o" aria-hidden="true"></i></i>1:30 PM - 4:30 PM</li>
-      <li class="user-section"><i class="fa fa-user" aria-hidden="true"></i></i> Speaker: John Doe</li>
-    </ul>
-    <p>Lorem ipsum dolor sit amet consectetur 
-      adipisicing elit. 
-    </p>
-    <a href="#">Join Event</a>
+  <div class="eventbox">
+    <img src="dummy-image.jpeg">
+    <h3>Event Name</h3>
+    <span class="month">Mar</span>
+    <span class="day">11</span>
+    <p> Lorem ipsum dolor, sit amet consectetur</p>
   </div>
-  <div class="month">March <br/> 3 2022</div>
- <!-- <button class="attend-signup" type="submit">Attend</button>-->
+  <div class="eventbox">
+    <img src="dummy-image.jpeg">
+    <h3>Event Name</h3>
+    <span class="month">Mar</span>
+    <span class="day">11</span>
+    <p> Lorem ipsum dolor, sit amet consectetur</p>
+  </div>
 </div>
-</div>
+
 
   <!-- Footer -->
 <footer class="bg-1 text-center" id="footer">
