--- a/employee-login.html
+++ b/employee-login.html
@@ -9,8 +9,8 @@
   <link rel="icon" href="/favicon.svg" type="image/svg+xml">
   <link rel="apple-touch-icon" href="/apple-touch-icon.png">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">  <link rel="stylesheet" href="index.css">
-  <link rel="stylesheet" href="index.css">
-  <link rel="stylesheet" href="employee-login.css">
+  <link rel="stylesheet" href="css/index.css">
+  <link rel="stylesheet" href="css/employee-login.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>  <script src="myScript.js"></script>
@@ -55,37 +55,26 @@
     <div class="container-fluid">
       <div class="row">
         <div class="col-sm-6 text-black bg-3">
-
           <div class="d-flex align-items-center h-custom-2 px-5 ms-xl-4 mt-5 pt-5 pt-xl-0 mt-xl-n5">
-
-            <form style="width: 23rem;">
-
+            <form action="eauthenticate.php" method:'POST' style="width: 23rem;">
               <h3 class="fw-normal mb-3 pb-3" style="letter-spacing: 1px;">Employee Login</h3>
-
               <div class="form-outline mb-4">
-                <input type="email" name="email" id="inputEmail" class="form-control form-control-lg" required autofocus />
-                <label class="form-label" for="inputEmail">Email address</label>
+                <input type="text" name="username" id="username" class="form-control form-control-lg" required autofocus />
+                <label class="form-label" for="username">Email address</label>
               </div>
-
               <div class="form-outline mb-4">
-                <input type="password" name="password" id="inputPassword" class="form-control form-control-lg" required />
-                <label class="form-label" for="inputPassword">Password</label>
+                <input type="password" name="password" id="password" class="form-control form-control-lg" required />
+                <label class="form-label" for="password">Password</label>
               </div>
-
               <div class="pt-1 mb-4">
-                <button class="btn btn-info btn-lg btn-block" type="submit">Login</button>
+                <button class="btn btn-info btn-lg btn-block" type="submit" formmethod="post" formaction="eauthenticate.php">Login</button>
               </div>
-
               <p class="small mb-5 pb-lg-2"><a class="text-muted" href="#!">Forgot password?</a></p>
-              <p>Don't have an account? <a href="#!" class="link-info">Register here</a></p>
-
             </form>
-
           </div>
-
         </div>
         <div class="col-sm-6 px-0 d-none d-sm-block">
-          <img src="login.jpeg" alt="Login image" class="w-100 vh-100" style="object-fit: cover; object-position: left;">
+          <img src="images/login.jpeg" alt="Login image" class="w-100 vh-100" style="object-fit: cover; object-position: left;">
         </div>
       </div>
     </div>
