added slideshow for images and textbox

--- a/events.html
+++ b/events.html
@@ -69,9 +69,14 @@
                     <img src="retirement-community.jpeg" alt="old woman painting" class="d-block" style="width:100%">
                     <div class="text-block">
                         <h2>Event 1</h2>
-                        <p>What a beautiful sunrise</p>
+                        <p>Details</p>
                         <p><i class="fa fa-clock-o" aria-hidden="true"></i>
                             Time</p>
+                            <p><i class="fa fa-calendar" aria-hidden="true"></i>
+                              Date</p>
+                              <div class="resident-join">
+                                <a href="resident-login.html">Login To Join</a>
+                              </div>
                       </div>  
             </div>
         
@@ -79,18 +84,28 @@
         <img src="retirement-community.jpeg" alt="old people gathering" class="d-block" style="width:100%">
         <div class="text-block">
             <h2>Event 2</h2>
-            <p>What a beautiful sunrise</p>
+            <p>Details</p>
             <p><i class="fa fa-clock-o" aria-hidden="true"></i>
             Time</p>
+            <p><i class="fa fa-calendar" aria-hidden="true"></i>
+              Date</p>
+              <div class="resident-join">
+                <a href="resident-login.html">Login To Join</a>
+              </div>
           </div> 
       </div>
       <div class="carousel-item">
         <img src="retirement-community.jpeg" alt="old people sitting together" class="d-block" style="width:100%">
         <div class="text-block">
             <h2>Event 3</h2>
-            <p>What a beautiful sunrise</p>
+            <p>Details</p>
             <p><i class="fa fa-clock-o" aria-hidden="true"></i>
             Time</p>
+            <p><i class="fa fa-calendar" aria-hidden="true"></i>
+            Date</p>
+            <div class="resident-join">
+              <a href="resident-login.html">Login To Join</a>
+            </div>
           </div> 
       </div>
     </div>
