--- a/events.html
+++ b/events.html
@@ -149,6 +149,13 @@
   </div>
 </div> 
 -->
+  <div class="container-fluid">
+    <div class="container">
+    <div class="row">
+      <iframe src="https://calendar.google.com/calendar/embed?height=600&wkst=1&bgcolor=%23A79B8E&ctz=America%2FNew_York&showTitle=0&showCalendars=1&title=Events&src=Y182ZGkydGw2NG1lY3UzOGwwbDhkODQxNGR1MEBncm91cC5jYWxlbmRhci5nb29nbGUuY29t&src=ZW4udXNhI2hvbGlkYXlAZ3JvdXAudi5jYWxlbmRhci5nb29nbGUuY29t&color=%23EF6C00&color=%230B8043" style="border:solid 1px #777" width="800" height="600" frameborder="0" scrolling="no"></iframe>
+    </div>
+    </div>
+  </div>
 
   <!-- Footer -->
 <footer class="bg-1 text-center" id="footer">
