--- a/events.html
+++ b/events.html
@@ -20,37 +20,35 @@
 
 <body>
   <nav class="navbar navbar-expand-sm h-100 bg-1" id="top">
-      <div class="container-fluid h-100">
-      <a class="navbar-brand nav-link" href="index.html">LOGO</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-      </button>
-          <div class="collapse navbar-collapse h-100" id="navbarNavDropdown">
-              <ul class="nav navbar-nav ms-auto h-100 ">
-                  <li class="nav-item">
-                      <a class="nav-link active" aria-current="page" href="index.html">HOME</a>
-                  </li>
-                  <li class="nav-item">
-                      <a class="nav-link" href="resources.html">RESOURCES</a>
-                  </li>
-                  <li class="nav-item">
-                      <a class="nav-link" href="events.html">EVENTS</a>
-                  </li>
-                  <li class="nav-item dropdown">
-                      <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                      LOGIN
-                      </a>
-                      <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdownMenuLink">
-                      <li><a class="dropdown-item" href="resident-login.html">RESIDENT LOGIN</a></li>
-                      <li><a class="dropdown-item" href="employee-login.html">EMPLOYEE LOGIN</a></li>
-                      </ul>
-                  </li>
-              </ul>
-          </div>
-      </div>
-  </nav>
-
-
+    <div class="container-fluid h-100">
+    <a class="navbar-brand" href="index.html"><img src="logo.png" alt="Logo" width="200" height="50"></a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+        <div class="collapse navbar-collapse h-100" id="navbarNavDropdown">
+            <ul class="nav navbar-nav ms-auto h-100 ">
+                <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="resources.html">Resources</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="events.html">Events</a>
+                </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                    Login
+                    </a>
+                    <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdownMenuLink">
+                    <li><a class="dropdown-item" href="resident-login.html">Resident Login</a></li>
+                    <li><a class="dropdown-item" href="employee-login.html">Employee Login</a></li>
+                    </ul>
+                </li>
+            </ul>
+        </div>
+    </div>
+</nav>
 
     <!-- Carousel -->
 <div id="demo" class="carousel slide" data-bs-ride="carousel">
