--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 </nav>
 
 <!-- Hero Image -->
-<section class="jtimage">
+<section class="jtimage" style="background-image: url(images/jumbo.jpeg)">
   <div class="inner">
     <div class="container">
       <div class="row">
