added pictures and updated events page

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 <!-- Container Top -->
 <div class="container-fluid bg-3">
   <div id="band" class="container text-center bg-3">
-    <h3>Loerm Ipsum</h3>
+    <h3>Testimonals</h3>
     <p><em>We love music!</em></p>
     <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
     <br>
@@ -72,19 +72,19 @@
       <div class="col-sm-4 pt-4">
         <p class="text-center pb-0"><strong>Name</strong></p><br>
         <a href="#demo">
-          <img src="dummy-image.jpeg" class="rounded-circle person" alt="Random Name" width="255" height="255">
+          <img src="old-woman2.jpg" class="rounded-circle person" alt="Random Name" width="255" height="255">
         </a>
       </div>
       <div class="col-sm-4 pt-4">
         <p class="text-center pb-0"><strong>Name</strong></p><br>
         <a href="#demo2">
-          <img src="dummy-image.jpeg" class="rounded-circle person" alt="Random Name" width="255" height="255">
+          <img src="old-man1.jpg" class="rounded-circle person" alt="Random Name" width="255" height="255">
         </a>
       </div>
       <div class="col-sm-4 pt-4">
         <p class="text-center pb-0"><strong>Name</strong></p><br>
         <a href="#demo3">
-          <img src="dummy-image.jpeg" class="rounded-circle person" alt="Random Name" width="255" height="255">
+          <img src="old-woman1.jpg" class="rounded-circle person" alt="Random Name" width="255" height="255">
         </a>
       </div>
     </div>
