added slideshow for homepage and pictures

--- a/index.html
+++ b/index.html
@@ -47,8 +47,48 @@
     </div>
 </nav>
 
+<div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel">
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img src="old-couple.jpg" class="d-block w-100" alt="..." >
+      <div class="box-slide">
+        <h1>Logistic Owls</h1>
+        <p>Retirement Community</p>
+      <a href="#contact">Contact Us</a>
+      </div>
+    </div>
+    <div class="carousel-item">
+      <img src="lobby.jpg" class="d-block w-100" alt="...">
+      <div class="box-slide">
+        <h1>Logistic Owls</h1>
+        <p>Retirement Community</p>
+      <a href="#contact">Contact Us</a>
+      </div>
+    </div>
+    <div class="carousel-item">
+      <img src="building.jpg" class="d-block w-100" alt="..." >
+      <div class="box-slide">
+        <h1>Logistic Owls</h1>
+        <p>Retirement Community</p>
+      <a href="#contact">Contact Us</a>
+      </div>
+    </div>
+    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Previous</span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Next</span>
+    </button>
+  </div>
+</div>
+     
+<span class="carousel-control-next-icon"></span>
+</button>
+</div>
 <!-- Hero Image -->
-<section class="jtimage" style="background-image: url(jumbo.jpeg)">
+<!--<section class="jtimage" style="background-image: url(jumbo.jpeg)">
   <div class="inner">
     <div class="container">
       <div class="row">
@@ -60,7 +100,7 @@
     </div>
   </div>
 </section>
-
+-->
 <!-- Container Top -->
 <div class="container-fluid bg-3">
   <div id="band" class="container text-center bg-3">
