--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 </section>
 -->
 <!-- Container Top -->
-<div class="container-fluid bg-3">
+<div class="container-fluid bg-3 pt-0">
   <div id="band" class="container text-center bg-3">
     <h3>Testimonals</h3>
     <p><em>We love music!</em></p>
@@ -132,7 +132,7 @@
 </div>
 
 <!-- Container Middle -->
-<div class="container-fluid pt-3 pb-3">
+<div class="container-fluid pt-3 pb-3 bg-5">
   <div class="container">
     <h3 class="text-center">News</h3>
     <div class="row text-center">
