--- a/index.html
+++ b/index.html
@@ -106,19 +106,19 @@
     <br>
     <div class="row">
       <div class="col-sm-4 pt-4">
-        <p class="text-center pb-0"><strong>Name</strong></p><br>
+        <p class="text-center pb-0"><strong>Name</strong></p>
         <a href="#demo">
           <img src="old-woman2.jpg" class="rounded-circle person" alt="Random Name" width="255" height="255">
         </a>
       </div>
       <div class="col-sm-4 pt-4">
-        <p class="text-center pb-0"><strong>Name</strong></p><br>
+        <p class="text-center pb-0"><strong>Name</strong></p>
         <a href="#demo2">
           <img src="old-man1.jpg" class="rounded-circle person" alt="Random Name" width="255" height="255">
         </a>
       </div>
       <div class="col-sm-4 pt-4">
-        <p class="text-center pb-0"><strong>Name</strong></p><br>
+        <p class="text-center pb-0"><strong>Name</strong></p>
         <a href="#demo3">
           <img src="old-woman1.jpg" class="rounded-circle person" alt="Random Name" width="255" height="255">
         </a>
